manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: image-finder
          image: jakousa/dwk-app3-image-finder:e11a700350aede132b62d3b5fd63c05d6b976394
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
        - name: image-response
          image: jakousa/dwk-app3-image-response:e11a700350aede132b62d3b5fd63c05d6b976394
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
